# IronRAG

./: .env.example  .secrets.baseline  CHANGELOG.md  Cargo.toml  Makefile  README.md  docker-compose-local.yml  docker-compose-s4.yml  docker-compose.yml  install.sh
apps/api/: .env.example  Cargo.toml  Dockerfile
apps/api/contracts/: openapi.gen.yaml
apps/api/docker/: docling-extract.py
apps/api/migrations/: 0008_soft_delete_reenqueue.sql  0012_document_hint.sql  0014_agent_concurrency_graph_indexes.sql  0016_default_vision_raster_recognition.sql
apps/api/src/: mcp_types.rs
apps/api/src/app/: config.rs  state.rs
apps/api/src/app/config/: tests.rs
apps/api/src/domains/: catalog.rs  content.rs  ingest.rs  query.rs  query_ir.rs  recognition.rs
apps/api/src/infra/: persistence.rs  repositories.rs
apps/api/src/infra/arangodb/: collections.rs  document_store.rs  search_store.rs
apps/api/src/infra/arangodb/document_store/: technical_facts.rs
apps/api/src/infra/repositories/: catalog_repository.rs  content_repository.rs  ingest_repository.rs  query_repository.rs  runtime_graph_repository.rs
apps/api/src/infra/repositories/ai_repository/: catalog.rs
apps/api/src/infra/repositories/ingest_repository/: attempts.rs  jobs.rs  units.rs
apps/api/src/integrations/: llm.rs
apps/api/src/integrations/docling/: mod.rs
apps/api/src/interfaces/http/: catalog.rs  content.rs  mcp.rs  openapi.rs  ops.rs  query.rs  webhook.rs
apps/api/src/interfaces/http/content/: multipart.rs  source_download.rs  types.rs
apps/api/src/interfaces/http/mcp/: tools.rs
apps/api/src/interfaces/http/mcp/tools/: documents.rs  grounded.rs
apps/api/src/observability/: mod.rs
apps/api/src/services/: catalog_service.rs
apps/api/src/services/ai_catalog_service/: bootstrap.rs  provider_validation.rs  tests.rs
apps/api/src/services/content/: document_accounting.rs  document_hint.rs  mod.rs
apps/api/src/services/content/service/: contracts.rs  document.rs  mappers.rs  pipeline.rs  revision.rs  snapshot.rs
apps/api/src/services/graph/: canonical_projection.rs  identity.rs  maintenance.rs  mod.rs  projection.rs  quality_guard.rs  rebuild.rs  service.rs
apps/api/src/services/graph/extract/: mod.rs  parse.rs  prompt.rs  recovery.rs  session.rs  tests.rs
apps/api/src/services/graph/service/: materialization.rs
apps/api/src/services/ingest/: runtime.rs  service.rs  structured_preparation.rs  web.rs  worker.rs
apps/api/src/services/ingest/web/: recursive.rs  single_page.rs
apps/api/src/services/ingest/worker/: extraction.rs  runtime.rs
apps/api/src/services/knowledge/: graph_stream.rs  runtime_read.rs  service.rs
apps/api/src/services/mcp/: mutations.rs
apps/api/src/services/mcp/access/: documents.rs  graph.rs  types.rs
apps/api/src/services/ops/: billing.rs  deployment_diagnostics.rs  provider_failure.rs  service.rs
apps/api/src/services/query/: agent_loop.rs  assistant_prompt.rs  compiler.rs  latest_versions.rs  llm_context_debug.rs  mod.rs  planner.rs  result_cache.rs  search.rs  text_match.rs
apps/api/src/services/query/execution/: answer.rs  answer_pipeline.rs  consolidation.rs  context.rs  document_target.rs  focused_document_answer.rs  graph_retrieval.rs  preflight.rs  question_intent.rs  retrieve.rs  retrieve_tests.rs  source_context.rs  structured_query_pipeline.rs  technical_literal_focus.rs  technical_literals.rs  tuning.rs  types.rs  verification.rs
apps/api/src/services/query/execution/tests/: answer_pipeline_tests.rs  focused_document_tests.rs  misc_tests.rs  mod.rs  preflight_tests.rs  technical_literal_tests.rs  verification_tests.rs
apps/api/src/services/query/mcp_agent/: turn.rs
apps/api/src/services/query/service/: context.rs  formatting.rs  mod.rs  session.rs  tests.rs  turn.rs
apps/api/src/shared/: mod.rs  text_encoding.rs  text_tokens.rs
apps/api/src/shared/extraction/: file_extract.rs  html_main_content.rs  text_quality.rs
apps/api/src/shared/extraction/file_extract/: normalization.rs
apps/api/tests/: audit_events.rs  billing_rollups.rs  content_lifecycle.rs  content_repository.rs  extract_graph.rs  greenfield_bootstrap.rs  ingest_attempts.rs  ingest_repository.rs  knowledge_search.rs  mcp_grounded_answer_contract.rs  mcp_memory_permissions.rs  mcp_memory_reads.rs  mcp_memory_search.rs  ops_state.rs  webhook_inbound_stub.rs
apps/api/tests/support/: content_lifecycle_support.rs
apps/web/: Dockerfile  nginx.conf.template  package-lock.json  package.json  security-headers.conf
apps/web/public/: openapi.gen.yaml  swagger-custom.css  swagger-init.js  swagger.html
apps/web/src/: index.css
apps/web/src/app/: main.tsx  zodRuntime.ts
apps/web/src/app/components/: AppShell.tsx
apps/web/src/features/admin/: AdminPage.test.tsx  AdminPage.tsx
apps/web/src/features/assistant/: AssistantPage.test.tsx  AssistantPage.tsx
apps/web/src/features/documents/: DocumentsPage.test.tsx
apps/web/src/features/swagger/: SwaggerPage.tsx
apps/web/src/shared/api/: admin.ts  documents.ts  query.test.ts  query.ts
apps/web/src/shared/components/: TablePaginationFooter.tsx
apps/web/src/shared/contexts/: AppContext.tsx  (+2 more)
apps/web/tests/e2e/: assistant-source-links.spec.ts
charts/ironrag/: Chart.yaml  values.yaml
charts/ironrag/templates/: _helpers.tpl  api.yaml  runtime-config.yaml  startup-job.yaml  web.yaml  worker.yaml
crates/contracts/src/: assistant.rs
docs/en/: BENCHMARKS.md  FRONTEND.md  MCP.md  PIPELINE.md  README.md  WEBHOOK.md
docs/perf/: 2026-05-22-focused-procedural-retrieval.md  2026-05-22-module-context-retrieval.md
docs/ru/: BENCHMARKS.md  FRONTEND.md  MCP.md  PIPELINE.md  README.md  WEBHOOK.md
scripts/bench/: agent_turn_p95.py  test_agent_turn_p95.py
scripts/minikube/: render-all.sh  validate-k8s-ha.sh
scripts/ops/: check_mcp_agent_rollout.sh  lint_migrations.sh  profile-agent-surfaces.py  test_check_mcp_agent_rollout.py  test_profile_agent_surfaces.py
(+42 files in other folders)
