[workspace]
resolver = "2"
members = [
    "apps/api",
    "crates/contracts",
]

[workspace.package]
version = "0.4.7"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[workspace.dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
rust_decimal = { version = "1.41.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
utoipa = { version = "=5.5.0", features = ["chrono", "decimal", "uuid", "axum_extras", "yaml"] }
uuid = { version = "1.23.1", features = ["serde", "v7"] }

[profile.profiling]
inherits = "release"
debug = 1
strip = false
